--- a/src/app.less
+++ b/src/app.less
@@ -1,5 +1,7 @@
+@import "./styles/var";
+
 .page {
-  color: #333;
+  color: @black;
   font-size: 14px;
-  background-color: #fff;
+  background-color: @background;
 }
