--- a/src/app.less
+++ b/src/app.less
@@ -1,5 +1,9 @@
 @import "./styles/var";
 
+@media (prefers-color-scheme: dark) {
+  @import "./styles/dark";
+}
+
 .page {
   color: @black;
   font-size: 14px;
