--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -1,8 +1,13 @@
 <view class="">
   <button bind:tap="handleChangeToken">更新token</button>
-  <view><text>token: {{ token }}</text></view>
+  <view>
+    <text>token: {{ token }}</text>
+  </view>
   <button bind:tap="handleChangeBalance">更新balance</button>
-  <view><text>balance: {{ wallet.balance }}</text></view>
+  <view>
+    <text>balance: {{ wallet.balance }}</text>
+  </view>
+  <component-test></component-test>
   <!-- to user -->
   <navigator url="/pages/user/index">to user</navigator>
 </view>
